RawData/VPC/vpc_route_table_info.json
{
    "RouteTables": [
       {
          "Associations": [
             {
                "Main": false,
                "RouteTableAssociationId": "rtbassoc-08fd404b9c3c64057",
                "RouteTableId": "rtb-0ead2f0b6b380abf8",
                "SubnetId": "subnet-0cba48789535597d6",
                "AssociationState": {
                   "State": "associated"
                }
             },
             {
                "Main": false,
                "RouteTableAssociationId": "rtbassoc-0690d7ff53d85bbf4",
                "RouteTableId": "rtb-0ead2f0b6b380abf8",
                "SubnetId": "subnet-051809d7488bb2545",
                "AssociationState": {
                   "State": "associated"
                }
             }
          ],
          "PropagatingVgws": [],
          "RouteTableId": "rtb-0ead2f0b6b380abf8",
          "Routes": [
             {
                "DestinationCidrBlock": "10.10.0.0/16",
                "GatewayId": "local",
                "Origin": "CreateRouteTable",
                "State": "active"
             },
             {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": "igw-06ba57ec5520e6baf",
                "Origin": "CreateRoute",
                "State": "active"
             }
          ],
          "Tags": [
             {
                "Key": "Name",
                "Value": "msa_maker-test-apne2-vpc-public"
             },
             {
                "Key": "Project",
                "Value": "msa_maker"
             }
          ],
          "VpcId": "vpc-07c41a395ef34a994",
          "OwnerId": "767404772322"
       }
    ],
    "ResponseMetadata": {
       "RequestId": "ff52980f-a57a-453e-b2bc-b0099fda451e",
       "HTTPStatusCode": 200,
       "HTTPHeaders": {
          "x-amzn-requestid": "ff52980f-a57a-453e-b2bc-b0099fda451e",
          "cache-control": "no-cache, no-store",
          "strict-transport-security": "max-age=31536000; includeSubDomains",
          "vary": "accept-encoding",
          "content-type": "text/xml;charset=UTF-8",
          "content-length": "2351",
          "date": "Wed, 20 Apr 2022 07:42:54 GMT",
          "server": "AmazonEC2"
       },
       "RetryAttempts": 0
    }
 }
